Fixed tailored module gap

--- a/css/mobile.style.css
+++ b/css/mobile.style.css
@@ -84,10 +84,9 @@ Top Carousel
   display: flex;
   flex-wrap: wrap;
   width: 100%;
-  height: 37rem;
+  height: 43rem;
   justify-content: center;
   padding: 1rem;
-  gap: 2rem;
 }
 .mobile-tailor-img-1 {
   width: 16rem;
